@@ -29,7 +29,7 @@
 #include "apr_optional.h"
 #include "httpd.h"
 
-#define REDIRECT_HANDLER_NAME "redirect-handler"
+#define REWRITE_REDIRECT_HANDLER_NAME "rewrite-redirect-handler"
 
 /* rewrite map function prototype */
 typedef char *(rewrite_mapfunc_t)(request_rec *r, char *key);
