@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_rewrite: Rename the handler that does per-directory internal 
+     redirects to "rewrite-redirect-handler" from "redirect-handler" so
+     it is less ambiguous and less likely to be reused. [Eric Covener]
 
   *) mod_dir: Don't search for a DirectoryIndex or DirectorySlash on a URL
      that was just rewritten by mod_rewrite. PR53929. [Eric Covener]
